--- a/llm.ipynb
+++ b/llm.ipynb
@@ -2,30 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "47ed18f8-de9a-47e6-80c2-19bb32ac3e68",
+   "execution_count": 4,
+   "id": "a3d53700-6ee2-4bce-88aa-8212959a7ddf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pytorch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpytorch\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pytorch'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of character: 20479\n",
+      "I HAD always thought Jack Gisburn rather a cheap genius--though a good fellow enough--so it was no \n"
      ]
     }
    ],
    "source": [
-    "import pytorch"
+    "filepath = \"/home/max/projects/llm/the-verdict.txt\"\n",
+    "with open(filepath, \"r\", encoding=\"utf-8\") as f:\n",
+    "    raw_text = f.read()\n",
+    "print(\"Total number of character:\", len(raw_text))\n",
+    "print(raw_text[:99])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec978bd4-affe-4dbb-9124-d9b9a9267dd3",
+   "id": "9b6277a1-3ea8-4df5-af63-c1c93e153d64",
    "metadata": {},
    "outputs": [],
    "source": []
